website: documentation for the "external" provider

--- a/website/source/assets/stylesheets/_docs.scss
+++ b/website/source/assets/stylesheets/_docs.scss
@@ -25,6 +25,7 @@ body.layout-dme,
 body.layout-dnsimple,
 body.layout-docker,
 body.layout-dyn,
+body.layout-external,
 body.layout-github,
 body.layout-grafana,
 body.layout-fastly,
